--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/user
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=kkung132!@
 
+spring.jpa.database=mysql
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=false
+spring.jpa.open-in-view=true
+spring.jpa.properties.hibernate.event.merge.entity_copy_observer=allow
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans = true
